import java.awt.Rectangle;

public final class WorldConfig {
    private WorldConfig(){}

    public static final int CAR_W = 100;
    public static final int CAR_H = 60;

    public static final Rectangle VOLVO_WORKSHOP_BOUNDS = new Rectangle(0, 465, 80, 80);

    public static final int MAX_CARS = 10;
}